# python-project-lvl2

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  lint-check.yml
gendiff/: __init__.py  constants.py  gendiff_generator.py  input_reader.py  output_formatters.py
gendiff/formatters/: json.py  output_formatters.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_start.py
gendiff/tests/: test_gendiff_flat.py  test_gendiff_nested.py
gendiff/tests/fixtures/: empty_file.txt
gendiff/tests/fixtures/flat/: expect_one_empty1.txt  expect_one_empty2.txt  file1.yaml  file2.yaml
gendiff/tests/fixtures/nested/: nested_json.txt
